--- a/app/index.html
+++ b/app/index.html
@@ -12,40 +12,20 @@
     <body>
         <div id="main" class="container container-fluid"></div>
 
-        <div id = "data">
-            <table id="mytable"></table>
-        </div>
-
-
-        <div id="stage" class="container container-fluid">
+        <script type='text/template' id='FxPairsView'>
             <div class="table-responsive">
-                <table class="table table-striped table-condensed">
+                <table class="table table-striped table-bordered table-hover">
                     <tr>
-                        <th>Symbol</th>
-                        <th>Price</th>
-                    </tr>
-                    <tr>
-                        <td>EUR/USD</td>
-                        <td>1.4442</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-        <script type='text/template' id='FxPairs'>
-            <div class="table-responsive">
-                <table class="table table-striped table-condensed">
-                    <tr>
-                        <th>Pair</th>
-                        <th>Price</th>
+                        <th class="sortable">Pair</th>
+                        <th class="sortable">Price</th>
                     </tr>
                 </table>
             </div>
         </script>
 
-        <script type='text/template' id='FxPair'>
-            <td><%= name %></td>
-            <td><%= price %></td>
+        <script type='text/template' id='FxPairView'>
+            <td><%= Name %></td>
+            <td><%= Ask %></td>
         </script>
 
         <script data-main="scripts/main.js" src="vendor/requirejs/require.js"></script>
